<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_fakultas"
            android:icon="@drawable/ic_menu_fakultas"
            android:title="@string/menu_fakultas" />
        <item
            android:id="@+id/nav_kampus"
            android:icon="@drawable/ic_menu_campus"
            android:title="@string/menu_kampus" />
    </group>

    <item android:title="Commuicate">
        <menu>
            <item
                android:id="@+id/nav_about_app"
                android:icon="@drawable/ic_about_app"
                android:title="@string/menu_about_app" />
            <item
                android:id="@+id/nav_developes"
                android:icon="@drawable/ic_developers"
                android:title="@string/menu_developers" />
        </menu>
    </item>

</menu>
