<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.unesa.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.unesa.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_fakultas"
        android:name="com.example.unesa.ui.fakultas.FakultasFragment"
        android:label="@string/menu_fakultas"
        tools:layout="@layout/fragment_fakultas" />

    <fragment
        android:id="@+id/nav_kampus"
        android:name="com.example.unesa.ui.kampus.KampusFragment"
        android:label="@string/menu_kampus"
        tools:layout="@layout/fragment_kampus" />

    <fragment
        android:id="@+id/nav_about_app"
        android:name="com.example.unesa.ui.aboutapp.aboutAppFragment"
        android:label="@string/menu_about_app"
        tools:layout="@layout/fragment_about_app" />

    <fragment
        android:id="@+id/nav_developes"
        android:name="com.example.unesa.ui.developers.developersFragment"
        android:label="@string/menu_developers"
        tools:layout="@layout/fragment_developers" />
</navigation>