<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aboutapp.aboutAppFragment">

    <TextView
        android:id="@+id/AboutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:textAlignment="center"
        android:text="@string/title_abaout" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="115dp"
        android:textAlignment="center"
        android:text="@string/Version" />


    <ImageView
        android:id="@+id/img_main"
        android:layout_width="220dp"
        android:layout_height="145dp"
        android:layout_marginTop="170dp"
        android:layout_marginRight="80dp"
        android:src="@drawable/unesa" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:textAlignment="center"
        android:text="@string/copyright" />

    <TextView
        android:id="@+id/licenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="390dp"
        android:textAlignment="center"
       android:text="@string/licenses" />

</FrameLayout>