<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.kampus.KampusFragment">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/jd_selayang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/selayang"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/selayang" />

        <TextView
            android:id="@+id/detail_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/detail_selayang" />

        <ImageView
            android:id="@+id/plc_ketintang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="600dp"
            android:src="@drawable/ic_place"/>

        <TextView
            android:id="@+id/ketintang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="600dp"
            android:textSize="15dp"
            android:textColor="@color/colorBlue"
            android:layout_alignLeft="@id/plc_ketintang"
            android:text="@string/lokasiketintang" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="640dp"
            android:src="@drawable/ic_place"/>

        <TextView
            android:id="@+id/lidah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="640dp"
            android:textSize="15dp"
            android:textColor="@color/colorBlue"
            android:text="@string/lokasilidah" />


    </RelativeLayout>
</ScrollView>