<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.developers.developersFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nav_developes1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:text="@string/nav_dev" />


        <ImageView
            android:id="@+id/img_main"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/dev1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:text="@string/dev1"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/sosmed1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="290dp"
            android:text="@string/sosmed"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nav_developes2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp"
            android:text="@string/nav_dev"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/img_main2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="490dp"
            android:layout_marginRight="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/dev2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="670dp"
            android:text="@string/dev2"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/sosmed2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="700dp"
            android:text="@string/sosmed"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>